Tagging dropdown options spacing and state fixed.

--- a/assets/styles/global.less
+++ b/assets/styles/global.less
@@ -13,3 +13,9 @@
 .bottom_cushion {
   margin-bottom: 30px !important;
 }
+
+.vertical_selection_100_wide {
+  width: 100%;
+  float: left;
+  margin: 1%;
+}
