--- a/assets/styles/inventory_gamepad.less
+++ b/assets/styles/inventory_gamepad.less
@@ -1,5 +1,5 @@
 #inventory_gamepad {
-  height: 4500px;
+  height: 4800px;
   width: 90%;
   margin: 50px 5%;
   border: 1px solid black;
