--- a/assets/styles/inventory_gamepad_add_item_form.less
+++ b/assets/styles/inventory_gamepad_add_item_form.less
@@ -345,11 +345,22 @@
   position: absolute;
   right: 10px;
   background-color: white;
+  z-index: 1;
   border: 1px solid rgba(0, 0, 0, 0.30);
 }
 
 .add_item_tagging_dropdown_menu_tag_options {
-  padding: 1% 3%;
+  padding: 3%;
+}
+
+.radio_checkbox_label_input {
+  float: left;
+  width: 15%;
+  margin-top: 3px;
+}
+
+.radio_checkbox_label_span {
+  float: left;
 }
 
 .dropdown_tag_checkbox_selections {
